# docsmithcpp

./: .clang-format  .clang-tidy  CMakeLists.txt  NOTICE  Readme.md
architecture/find/: CMakeLists.txt  find.cpp
cmake/: DocSmithCppConfig.cmake.in
include/docsmithcpp/: Parser.h  TextDoc.h  element.h  forward_decl.h  has_children.h  iostream_writer.h  list.h  named_registry.h  nodes.h  parser.h  style.h  text.h  text_doc.h  writer.h
include/docsmithcpp/odt/: ODT_File.h  file.h  writer.h  xml_writer.h
src/: CMakeLists.txt  has_children.cpp  list.cpp  nodes.cpp  text_doc  text_doc.cpp
src/odt/: ODT_File.cpp  basic_main.cpp  file.cpp  writer.cpp  xml_writer.cpp
tests/: CMakeLists.txt  basic_usage.cpp  test_main.cpp
tests/odt/: basic.odt  complex.odt  moderate.odt  paragraph_with_style.odt  test_odt.cpp
